// 默认为 pinecone 项目工具类，修改部分路径及数据库连接

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,14 @@ server:
   servlet:
     context-path: /code-generator
 
-debug:
-  true
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     #MySQL配置
-    driverClassName: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@192.168.10.48:1521:helowin
-    username: YMS
-    password: YMS
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://39.96.185.194:3306/pinecone?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    username: pinecone
+    password: pinecone
     #oracle配置
 #    driverClassName: oracle.jdbc.OracleDriver
 #    url: jdbc:oracle:thin:@47.100.206.162:1521:xe
@@ -47,4 +45,4 @@ pagehelper:
 
 #指定数据库，可选值有【mysql、oracle、sqlserver、postgresql】
 renren:
-  database: oracle
+  database: mysql
