--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,7 +1,7 @@
 #\u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
 
 #\u5305\u540D
-package=com.daxiongys
+package=cn.acorg
 moduleName=demo
 #\u4F5C\u8005
 author=\u677E\u679C
